# tetriz_win32

./: CMakeLists.txt  README.md  a.cpp  color.h  control.cpp  control.h  define.h  draw.cpp  draw.h  game.cpp  game.h  main.cpp  piece.cpp  piece.h  structure.xlsx  terminal.cpp  terminal.h  tetriz.map  tetromino.cpp  tetromino.h  utils.cpp  utils.h  window.cpp  window.h
